--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "copy-webpack-plugin": "^12.0.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.7.5"
   }
 }
